--- a/FinalAssignment/FinalAssignment/FinalAssignment/FinalAssignment.csproj
+++ b/FinalAssignment/FinalAssignment/FinalAssignment/FinalAssignment.csproj
@@ -205,6 +205,7 @@
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Models\AccountViewModels.cs" />
+    <Compile Include="Models\Attending.cs" />
     <Compile Include="Models\Customer.cs" />
     <Compile Include="Models\Database\CustomerDAO.cs" />
     <Compile Include="Models\Database\MovieDAO.cs" />
@@ -214,6 +215,7 @@
     <Compile Include="Models\ManageViewModels.cs" />
     <Compile Include="Models\Movie.cs" />
     <Compile Include="Models\Theater.cs" />
+    <Compile Include="Models\AttendingViewModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
   </ItemGroup>
@@ -275,11 +277,11 @@
     <Content Include="Views\Manage\VerifyPhoneNumber.cshtml" />
     <Content Include="Views\Shared\Lockout.cshtml" />
     <Content Include="Views\Shared\_LoginPartial.cshtml" />
+    <Content Include="Views\Movie\MovieAttendView.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
     <Folder Include="Views\Customer\" />
-    <Folder Include="Views\Movie\" />
     <Folder Include="Views\Theater\" />
   </ItemGroup>
   <ItemGroup>
